# gifter

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt  setup.cfg
data/processed/: data.json
docs/: using_poetry.md
gifter/: app.py  scraper.py
