###########
# 📜 Poetry
###########

[tool.poetry]
name = "gifter"
version = "0.1.0"
description = "Gift products to other countries that aren't available there."
authors = ["Shan Sun <17673810+bobbleoxs@users.noreply.github.com"]
license = "UNLICENSED"
classifiers = [
    "Private :: Do Not Upload"
]
packages = [
    { include = "gifter", from = "gifter" },
    # Add more packages here, e.g.
    # { include = "module_name", from = "gifter" },
]

[tool.poetry.dependencies]
python = "^3.9.7"
ipython = "^7.29.0"
loguru = "^0.5.3"
num2words = "^0.5.10"
streamlit = "^1.2.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
detect-secrets = "1.0.3"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.1.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.2.0"
flake8-no-pep420 = "^1.1.1"
flake8-return = "^1.1.3"
flake8-print = "^4.0.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pylint = "^2.10.2"
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


############
# ✅ Linters
############

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["gifter"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports="from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable="all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
good-names = [
    "i",
    "n_cols",
]
disable = [
    # "missing-module-docstring",  # example
    "redefined-outer-name",
]
logging-format-style="new"


##############
# 📣 Towncrier
##############
